# cpio_reader

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: bin.cpio  crc.cpio  newc.cpio  odc.cpio  read_cpios.rs
