[package]
name = "cpio_reader"
version = "0.1.2"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library to read the contents of cpio files"
repository = "https://github.com/toku-sa-n/cpio_reader"
readme = "README.md"
categories = ["no-std"]
keywords = ["no_std", "cpio"]

[dependencies]
bitflags = "2.0.0"
